Box controllers added

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@ limitations under the License.
     }
   </style>
 
-  <link rel="stylesheet" href="node_modules/pdfjs-dist/web/pdf_viewer.css">
+  <link rel="stylesheet" href="imports/pdfjs-dist/pdf_viewer.css">
 
-  <script src="node_modules/pdfjs-dist/build/pdf.js"></script>
-  <script src="node_modules/pdfjs-dist/web/pdf_viewer.js"></script>
+  <script src="imports/pdfjs-dist/pdf.js"></script>
+  <script src="imports/pdfjs-dist/pdf_viewer.js"></script>
+  <script src="imports/jquery/3.2.1/jquery-3.2.1.min.js"></script>
 </head>
 
 <body tabindex="1">
