--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ limitations under the License.
 
   <script src="imports/pdfjs-dist/pdf.js"></script>
   <script src="imports/pdfjs-dist/pdf_viewer.js"></script>
-  <script src="imports/jquery/3.2.1/jquery-3.2.1.min.js"></script>
+  <script src="vendor.js"></script>
 </head>
 
 <body tabindex="1">
